--- a/final-project/css/cart.css
+++ b/final-project/css/cart.css
@@ -51,6 +51,7 @@ li {
 .menu-btns {
     position: absolute;
     right: 2em;
+    margin-bottom: 1em;
 }
 
 li a {
@@ -88,12 +89,11 @@ hr {
 }
 
 #counter {
-    height: 50%;
     border-radius: 50%;
     background-color: rgba(230, 152, 51, 0.808);
-    font-size: 14px;
-    width: 1.3em;
-    height: 50%;
+    font-size: 10px;
+    width: 1.5em;
+    height: 40%;
 }
 
 .quantityTd input {
