--- a/final-project/css/details.css
+++ b/final-project/css/details.css
@@ -25,11 +25,11 @@ html, body {
     height:3em;
     text-align: center;
 }
-#admin:hover, #cart:hover{
+/* #admin:hover, #cart:hover{
     box-shadow: 2px 2px 6px rgba(26, 22, 1, 0.5);
     border-radius: 2px;
     transition-duration: .9s;
-}
+} */
 .menu-btns {
     position: absolute;
     right: 2em;
@@ -78,7 +78,7 @@ li {
     float: left;
 }
 .nav-link{
-    font-size: 2em;
+    font-size: 1.5em;
 }
 .navigation{
     position: sticky;
