--- a/final-project/css/details.css
+++ b/final-project/css/details.css
@@ -127,7 +127,8 @@ li {
 }
 
 #description>p {
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 1em;
 }
 
 #addToCart {
@@ -158,7 +159,7 @@ li {
 }
 
 .price {
-    margin-top: 4em;
+    margin-top: 2em;
 }
 
 .add-value {
