--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -48,7 +48,6 @@ a:hover {
     box-shadow: 2px 2px 6px rgba(240, 217, 84, 0.5);
     border-radius: 2px;
 } */
-
 .menu-btns {
     position: absolute;
     right: 6.5em;
@@ -58,13 +57,15 @@ a:hover {
 .menu-btns button {
     background-color: transparent;
     height: 3em;
-    width: 3em;
+    width: 5em;
     border: none;
 }
-
-/* .nav-link {
-    font-size: .5em;
-} */
+.fa-shopping-cart:hover, .fa-user-shield:hover {
+    color: rgb(93, 93, 93);
+}
+.nav-link {
+    font-size: 1.5em;
+}
 
 .navigation {
     background-color: rgba(12, 149, 7, 0.02);
@@ -108,11 +109,12 @@ li {
 
 #counter {
     position: absolute;
-    bottom: 2em;
+    bottom: 2.5em;
     left: 8em;
+    height: 1.5em;
+    width: 1.5em;
     border-radius: 50%;
     background-color: rgba(230, 152, 51, 0.808);
-    padding: .3em;
     font-size: 10px;
     text-align: center;
 }
