--- a/final-project/css/cart.css
+++ b/final-project/css/cart.css
@@ -27,17 +27,9 @@ li {
     transition-duration: .9s;
 } */
 
-.menu-btns {
-    position: absolute;
-    right: 6.5em;
-    margin-top: 1em;
-}
 
-.menu-btns button {
-    background-color: transparent;
-    height: 3em;
-    width: 5em;
-    border: none;
+#home, .menu-btns, img, a{
+    cursor: pointer;
 }
 
 .nav-link {
@@ -51,7 +43,7 @@ li {
 .menu-btns {
     position: absolute;
     right: 2em;
-    margin-bottom: 1em;
+    margin: .5em 0;
 }
 
 li a {
