--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -48,21 +48,56 @@ a:hover {
     box-shadow: 2px 2px 6px rgba(240, 217, 84, 0.5);
     border-radius: 2px;
 } */
+
 .menu-btns {
     position: absolute;
     right: 2em;
-    margin-top: .5em; 
+    margin: .5em 0;
 }
 
-.menu-btns button {
-    background-color: transparent;
-    height: 3em;
-    width: 5em;
-    border: none;
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
-.fa-shopping-cart:hover, .fa-user-shield:hover {
+
+.menu-btns li, img, #home{
+   
+    cursor: pointer;
+}
+
+#scrollTop {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Fixed/sticky position */
+    bottom: 20px;
+    /* Place the button at the bottom of the page */
+    right: 30px;
+    /* Place the button 30px from the right */
+    z-index: 99;
+    /* Make sure it does not overlap */
+    border: none;
+    /* Remove borders */
+    outline: none;
+    /* Remove outline */
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#scrollTop:hover {
+    background-color: #555;
+    /* Add a dark-grey background on hover */
+}
+
+.fa-shopping-cart:hover, .fa-user-shield:hover, .fa-leaf:hover {
     color: rgb(93, 93, 93);
 }
+
 .nav-link {
     font-size: 1.5em;
 }
@@ -70,7 +105,6 @@ a:hover {
 .navigation {
     background-color: rgba(12, 149, 7, 0.02);
 }
-
 
 select {
     position: absolute;
@@ -225,7 +259,7 @@ li {
 
 /*footer*/
 
-.footer{
+.footer {
     height: 15%;
     background-color: #F5F5F5;
 }
