--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -68,25 +68,19 @@ a:hover {
 
 #scrollTop {
     display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Fixed/sticky position */
     bottom: 20px;
-    /* Place the button at the bottom of the page */
     right: 30px;
-    /* Place the button 30px from the right */
     z-index: 99;
-    /* Make sure it does not overlap */
     border: none;
-    /* Remove borders */
     outline: none;
-    /* Remove outline */
-    background-color: red;
+    background-color:  rgba(93, 93, 93, 0.521);
     color: white;
     cursor: pointer;
-    padding: 15px;
     border-radius: 10px;
     font-size: 18px;
+    width: 4em;
+    height: 2em;
 }
 
 #scrollTop:hover {
