--- a/final-project/css/cart.css
+++ b/final-project/css/cart.css
@@ -62,7 +62,9 @@ button:focus, input:focus {
     outline-style: none
 }
 
-
+.total{
+    width: 4em;
+}
 
 .add-value {
     border: none;
@@ -103,7 +105,7 @@ hr {
 
 .quantityTd input {
     margin-left: 0;
-    width: 1.3em;
+    width: 2em;
     border: none;
     text-align: center!important;
     background-color: white;
