--- a/final-project/css/details.css
+++ b/final-project/css/details.css
@@ -83,9 +83,10 @@ li {
 }
 
 .navigation {
-    position: sticky;
-    background-color: rgba(12, 149, 7, 0.041)
+    background-color: rgba(12, 149, 7, 0.02);
+    position: relative;
 }
+
 
 .sticky {
     position: fixed;
