--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -28,8 +28,9 @@ a {
 }
 
 a:hover {
-    color: rgb(240, 216, 84);
+    color: black;
     transition-duration: .5s;
+    text-decoration: none;
 }
 
 /* .navigation {
