--- a/final-project/css/details.css
+++ b/final-project/css/details.css
@@ -20,9 +20,11 @@ html, body {
     height: 3em;
     text-align: center;
 }
-.fa-arrow-circle-right, .fa-arrow-circle-left{
+
+.fa-arrow-circle-right, .fa-arrow-circle-left {
     cursor: pointer;
 }
+
 .menu-btns {
     position: absolute;
     right: 2em;
@@ -89,7 +91,6 @@ li {
     position: relative;
 }
 
-
 .sticky {
     position: fixed;
     top: 0;
@@ -135,8 +136,12 @@ li {
     font-size: 18px;
     line-height: 1em;
 }
-.carousel-control-prev{
-    color:gray;
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%7f7f7f' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%7f7f7f' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e") !important;
 }
 #addToCart {
     width: 10em;
