--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -182,6 +182,7 @@ li {
     height: 10%;
     border-radius: 10em;
     color: rgb(39, 173, 39);
+    
 }
 
 /*------------------index---------------------*/
@@ -193,17 +194,17 @@ li {
 .display-item {
     height: 500px;
     margin: 1em 1em 2em 1em;
-    border: 1px solid rgba(128, 128, 128, 0.075);
+    border: 1px solid rgba(128, 128, 128, 0.199);
 }
 
 .display-item:hover {
-    box-shadow: 2px 4px 30px 1px rgba(175, 174, 170, 0.459);
+    box-shadow: 3px 5px 30px 1px rgba(175, 174, 170, 0.445);
     transition-duration: 800ms;
 }
 
 .isInFocus {
     height: 510px;
-    box-shadow: 2px 4px px 1px rgba(175, 174, 170, 0.459);
+    box-shadow: 2px 4px px 1px rgba(175, 174, 170, 0.548);
 }
 
 .display-img {
@@ -244,13 +245,17 @@ li {
     border-radius: 5em;
     background-color: rgb(223, 171, 0);
     border: 1px solid rgb(223, 171, 0);
+    
 }
 
 .to-cart-btn:hover {
-    background-color: rgba(216, 176, 45, 0.829);
-    border: 1px solid rgba(216, 176, 45, 0.829);
+    background-color: rgb(230, 193, 72);
+    border:none;
     /* box-shadow: 1px 1px 4px rgba(223, 171, 0, 0.842); */
-    transition-duration: 500ms;
+    /* transition-duration: 300ms; */
+    -webkit-transform: scale(1.01);
+    -ms-transform: scale(1.01);
+    transform: scale(1.01);
 }
 
 /*footer*/
